--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
     font-style: 18px;
     line-height: 21px;
-
 }
 
 a {
@@ -17,7 +16,7 @@ a {
     text-decoration: none;
 }
 
-ul{
+ul {
     list-style: none;
 }
 
@@ -27,17 +26,15 @@ ul{
     margin: 0 auto;
 }
 
-
-
 .section-page {
     padding: 100px 0;
 }
 
-
 .title {
     text-align: center;
     margin-bottom: 100px;
-    font-style: 36px;
+    font-style: normal;
+    font-size: 36px;
     line-height: 42px;
     font-weight: 400;
 }
@@ -89,29 +86,30 @@ ul{
     padding-top: 178px;
 }
 
-.about__inner{
+.about__inner {
     display: flex;
 }
 
-.about__info{
+.about__info {
     width: 375px;
     margin-right: 50px;
     flex: none;
 }
-.about__info-item{
+
+.about__info-item {
     margin-bottom: 25px;
     color: #e5e5e5;
 }
 
-.about__info-item span{
+.about__info-item span {
     display: block;
 }
 
-.about__text p{
+.about__text p {
     margin-bottom: 25px;
 }
 
-.video{
+.video {
     text-align: right;
     background-image: url('../images/video-bg.jpg');
     height: 100vh;
@@ -120,8 +118,7 @@ ul{
     background-repeat: no-repeat;
 }
 
-.video__text{
-    
+.video__text {
     font-family: Roboto Condensed;
     font-style: italic;
     font-weight: 300;
@@ -129,23 +126,21 @@ ul{
     line-height: 84px;
     color: #85CCDC;
     padding-top: 444px;
-
 }
 
-.video__text span{
+.video__text span {
     display: block;
     padding-right: 285px;
 }
 
-.video__btn{
+.video__btn {
     padding-left: 112px;
     position: relative;
     margin-right: 230px;
     bottom: -40px;
-
 }
 
-.video__btn::before{
+.video__btn::before {
     content: '';
     position: absolute;
     width: 100px;
@@ -155,14 +150,14 @@ ul{
     background-image: url('../images/ytb.svg');
 }
 
-.seasons__inner{
+.seasons__inner {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 100px 75px;
     counter-reset: number;
 }
 
-.seasons__item{
+.seasons__item {
     width: 350px;
     height: 250px;
     background-repeat: no-repeat;
@@ -175,11 +170,11 @@ ul{
     align-items: center;
 }
 
-.seasons__item:hover .seasons__link{
+.seasons__item:hover .seasons__link {
     opacity: 1;
 }
 
-.seasons__item::before{
+.seasons__item::before {
     content: '0' counter(number);
     counter-increment: number;
     position: absolute;
@@ -192,7 +187,7 @@ ul{
     z-index: -1;
 }
 
-.seasons__item:hover::after{
+.seasons__item:hover::after {
     content: '';
     position: absolute;
     top: 0;
@@ -202,9 +197,7 @@ ul{
     background: rgba(14, 14, 14, 0.8);
 }
 
-
-
-.seasons__link{
+.seasons__link {
     font-size: 36px;
     line-height: 42px;
     padding: 12px 78px 11px;
@@ -214,21 +207,20 @@ ul{
     z-index: 2;
 }
 
-.heroes__inner{
+.heroes__inner {
     display: flex;
     justify-content: space-between;
 }
 
-.heroes__slider-img{
+.heroes__slider-img {
     max-width: 775px;
-
 }
 
-.heroes__slider-text{
+.heroes__slider-text {
     max-width: 350px;
 }
 
-.slick-btn{
+.slick-btn {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -237,18 +229,17 @@ ul{
     z-index: 5;
     cursor: pointer;
     outline: none;
-
 }
 
-.slick-prev{
+.slick-prev {
     left: 38px;
 }
 
-.slick-next{
+.slick-next {
     right: 38px;
 }
 
-.heroes__name{
+.heroes__name {
     font-style: italic;
     font-weight: 300;
     font-size: 72px;
@@ -257,13 +248,11 @@ ul{
     margin-bottom: 44px;
 }
 
-
-
-.heroes__text p{
+.heroes__text p {
     margin-bottom: 15px;
 }
 
-.copy{
+.copy {
     padding: 14px 0 15px;
     text-align: center;
 }
