fix heroes__inner add images heroes

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,10 @@ ul {
     justify-content: space-between;
 }
 
+.heroes__images {
+    width: 100%;
+}
+
 .heroes__slider-img {
     max-width: 775px;
 }
