--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,14 @@ ul {
     transform: rotate(180deg);
 }
 
+.menu{
+    padding: 50px 0 50px;
+    background: linear-gradient(180deg, #111213 0%, #111213 43.62%, rgba(32, 31, 33, 0) 86.33%);
+}
+
 .menu__list {
     display: flex;
     justify-content: center;
-    padding: 50px 0 50px;
-    background: linear-gradient(180deg, #111213 0%, #111213 43.62%, rgba(32, 31, 33, 0) 86.33%);
 }
 
 .menu__list-item {
@@ -155,6 +158,7 @@ ul {
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 100px 75px;
     counter-reset: number;
+    padding-top: 50px;
 }
 
 .seasons__item {
@@ -185,6 +189,10 @@ ul {
     left: 0;
     top: -72px;
     z-index: -1;
+}
+
+.seasons__item:nth-child(n+10)::before{
+    content: counter(number);
 }
 
 .seasons__item:hover::after {
@@ -260,3 +268,61 @@ ul {
     padding: 14px 0 15px;
     text-align: center;
 }
+
+/* start season-1 */
+
+.menu__list-link--active{
+    color: #85CCDC;
+    text-decoration: underline;
+}
+
+.page-header{
+    background-image: url('../images/season1-bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 90vh;
+    position: relative;
+}
+
+.menu-container{
+    max-width: 1385px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.page-logo{
+    position: absolute;
+    left: 0;
+}
+
+.season-info{
+    position: absolute;
+    max-width: 1385px;
+    display: flex;
+    padding: 44px 47px 64px 35px;
+    background-color: #0E0E0E;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.season-info__num{
+    font-weight: bold;
+    font-size: 96px;
+    line-height: 56px;
+    text-align: center;
+    margin-right: 51px;
+}
+
+.season-info__num span{
+    display: block;
+    font-size: 36px;
+    line-height: 42px;
+}
+
+.season-info__text p{
+    margin-bottom: 15px;
+}
+/* end season-1 */
