--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ ul {
     justify-content: center;
 }
 
+.menu__bnt{
+    display: none;
+}
+
 .menu__list-item {
     padding: 0 13px;
 }
@@ -86,7 +90,7 @@ ul {
 }
 
 .logo {
-    padding-top: 178px;
+    padding-top: 17vh;
 }
 
 .about__inner {
@@ -128,7 +132,7 @@ ul {
     font-size: 72px;
     line-height: 84px;
     color: #85CCDC;
-    padding-top: 444px;
+    padding-top: 45vh;
 }
 
 .video__text span {
@@ -155,14 +159,14 @@ ul {
 
 .seasons__inner {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
     grid-gap: 100px 75px;
     counter-reset: number;
     padding-top: 50px;
 }
 
 .seasons__item {
-    width: 350px;
+    /* width: 350px; */
     height: 250px;
     background-repeat: no-repeat;
     background-position: center center;
@@ -300,7 +304,7 @@ ul {
     position: absolute;
     max-width: 1385px;
     display: flex;
-    padding: 44px 47px 64px 35px;
+    padding: 30px 10px 0px 10px;
     background-color: #0E0E0E;
     bottom: 0;
     left: 0;
@@ -326,3 +330,208 @@ ul {
     margin-bottom: 15px;
 }
 /* end season-1 */
+
+/* start media */
+
+@media (max-width: 1420px){
+    .page-logo{
+        left: 10px;
+        top: -6px;
+    }
+}
+
+@media (max-width: 1366px) {
+    .logo__img{
+        width: 50%;
+    }
+    .menu__list-link{
+        font-size: 24px;
+        line-height: 32px;
+    }
+    .about__info-item{
+        width: 256px;
+    }
+    .page-header{
+        height: 120vh;
+    }
+}
+
+@media (max-width: 1200px){
+    .heroes__inner{
+        display: block;
+    }
+    .heroes__slider-text{
+        max-width: 100%;
+        padding-top: 50px;
+    }
+    .heroes__slider-img{
+        max-width: 100%;
+    }
+
+}
+
+@media (max-width: 1088px){
+    .seasons__item{
+        height: 340px;
+    }
+
+}
+
+@media (max-width: 992px){
+    .page-logo{
+        display: none;
+    }
+}
+
+@media (max-width: 768px){
+    .about__inner{
+        display: block;
+    }
+    .section-page{
+        padding: 50px 0;
+    }
+    .title{
+        margin-bottom: 50px;
+        font-size: 28px;
+        line-height: 36px;
+    }
+    body{
+        font-size: 16px;
+        line-height: 19px;
+    }
+    .video{
+        padding-right: 30px;
+    }
+    .video__text{
+        font-size: 48px;
+        line-height: 56px;
+    }
+    .video__text span{
+        padding-top: 200px;
+        /* padding-right: 198px; */
+    }
+    .video__btn{
+        margin-right: 0;
+        padding-left: 62px;
+    }
+
+    .video__btn::before{
+        width: 50px;
+        height: 50px;
+        background-size: cover;
+        top: -16px;
+    }
+    .seasons__inner{
+        grid-gap: 80px 35px;
+    }
+    /* .slick-btn{
+        display: none;
+    } */
+    .heroes__name{
+        font-size: 46px;
+        line-height: 56px;
+        margin-bottom: 25px;
+    }
+    .season-info{
+        display: block;
+
+    }
+    .season-info__num{
+        text-align: left;
+        font-size: 50px;
+        line-height: 26px;
+        margin-bottom: 15px;
+
+    }
+    .season-info__num span{
+        font-size: 25px;
+        line-height: 32px;
+
+    }
+@media (max-width: 640px) {
+    .menu{
+        padding: 0;
+        background: linear-gradient(180deg, #111213 0%, #111213 10.62%, rgba(32, 31, 33, 0) 86.33%);
+        text-align: center;
+    }
+    .menu__list{
+        display: block;
+        transform: translateY(-130%);
+        transition: all .3s;
+    }
+
+    .menu__list.menu__list--active{
+        transform: translateY(0%);
+        padding-top: 100px;
+        background-color: #0e0e0e;
+    }
+
+    .menu__list-link{
+        display: block;
+        padding: 10px 0;
+    }
+    .logo{
+        padding-top: 21vh;
+    }
+
+    .page-logo{
+        display: block;
+        z-index: 11;
+        top: 22px;
+    }
+
+    .menu__bnt {
+        display: block;
+        width: 50px;
+        height: 40px;
+        cursor: pointer;
+        position: absolute;
+        right: 10px;
+        top:20px;
+        z-index: 10;
+        display: flex;
+        align-items: center;
+        background-color: transparent;
+        border: 0;
+        padding: 0;
+    }
+
+    .menu__bnt span{
+        background-color: #fff;
+        height: 5px;
+        width: 100%;
+    }
+    .menu__bnt::after, .menu__bnt::before {
+        content: '';
+        width: 100%;
+        height: 5px;
+        background-color: #fff;
+        position: absolute;
+    }
+
+    .menu__bnt::before {
+        top: 0;
+        left: 0;
+    }
+
+    .menu__bnt::after {
+        bottom: 0;
+        left: 0;
+    }
+
+    .page-header{
+        height: 160vh;
+    }
+}
+@media (max-width: 414px){
+    .seasons__item{
+        height: 203px;
+    }
+
+}
+@media (max-width: 375px){
+    .page-header{
+        height: 200vh;
+    }
+}
+/* end media */
